# Modern-cpp-Projects

./: .gitignore  README.md
ClassExamples/hello_world/: a.out  hello_world.cpp
ClassExamples/installation_files/: install_vs_code_extensions.sh
ClassExamples/lec_1/: CMakeLists.txt  lec_1.cpp  main.cpp  tools.cpp  tools.hpp
ClassExamples/lec_2/: a.out  ex_1.cpp  ex_2.cpp  ex_3.cpp  ex_4.cpp  ex_5.cpp  ex_6.cpp  test.cpp.save
ClassExamples/lec_3/: a.out  namespace_exp.cpp  overloading_exp.cpp  return_reference_example.cpp  string_inC.cpp  string_test.cpp  tuple_example.cpp
ClassExamples/lec_4/: a.out  algorithms_test1.cpp  iterator_test_1.cpp  map_test_1.cpp  vector_test_1.cpp
ClassExamples/lec_4/stl_algorithms/: CMakeLists.txt  accumulate.cpp  all_off.cpp  clamp.cpp  count.cpp  count_if.cpp  fill.cpp  find.cpp  for_each.cpp  hash.cpp  max.cpp  min_element.cpp  minmax_element.cpp  rotate.cpp  sample.cpp  sort.cpp  transform.cpp  utils.hpp
ClassExamples/lec_5/example_1/: opencv_exp_1.cpp  opex
ClassExamples/lec_5/example_2/: CMakeLists.txt
ClassExamples/lec_5/example_2/src/: compute_sifts.cpp  display_sifts.cpp
ClassExamples/lec_5/example_3/: CMakeLists.txt  a.out  read_bin  read_bin.cpp  write_bin.cpp  write_read_cv_mat.cpp
ClassExamples/lec_6/example_1/: a.out  class_ex.cpp  constructor_ex.cpp  cpy_mv_constu_ope.cpp  inheritance_ex.cpp  landrvalues.cpp  landrvalues_class.cpp
HW1/: HW1.cpp  a.out  guessing_game.cpp  hw
cpp-homeworks/: .clang-tidy
cpp-homeworks/homework_1/task_1/: commands.sh
cpp-homeworks/homework_1/task_2/: CMakeLists.txt  README.md  build.sh  build.sh.save  main
cpp-homeworks/homework_2/task_1/: CMakeLists.txt  ClangFormat_copy.cmake  a.out  rand_test.cpp
cpp-homeworks/homework_2/task_1/src/: clang_commands.txt  guessing_game.cpp
cpp-homeworks/homework_2/task_2/: CMakeLists.txt
cpp-homeworks/homework_2/task_2/src/: input_param_streams.cpp
cpp-homeworks/homework_3/: CMakeLists.txt
cpp-homeworks/homework_3/api/: homework_3.h
cpp-homeworks/homework_3/src/: create_html.cpp  html_writer_functions.cpp  image_browser_functions.cpp
cpp-homeworks/homework_3/web_app/: test.html
cpp-homeworks/homework_4/: CMakeLists.txt
cpp-homeworks/homework_4/include/: homework_4.h
cpp-homeworks/homework_4/src/: main.cpp
cpp-homeworks/homework_5/: CMakeLists.txt  install_opencv.txt
cpp-homeworks/homework_5/include/: convert_dataset.hpp  homework_5.h  serialize.hpp  sifts.hpp  sifts_internal.hpp
cpp-homeworks/homework_5/src/: compute_sifts.cpp  convert_dataset.cpp  display_image.cpp  display_sifts.cpp  my_main.cpp  serialization.cpp  sifts_internal.cpp
cpp-homeworks/homework_5/tests/: CMakeLists.txt  sifts_internal.cpp  test_convert_dataset.cpp  test_serialize.cpp
cpp-homeworks/homework_6/: CMakeLists.txt
cpp-homeworks/homework_6/include/: homework_6.h  image_class.hpp
cpp-homeworks/homework_6/io_tools/: io_tools.cpp  io_tools.hpp
cpp-homeworks/homework_6/src/: image_class.cpp  my_main.cpp
cpp-homeworks/homework_6/tests/: CMakeLists.txt  test_from_file.cpp  test_histogram.cpp  test_resize.cpp
test_setup/: a.out  test.cpp
